<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/frameLayoutSecond"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:srcCompat="@color/design_default_color_primary_dark"
            android:contentDescription="@string/backgroundPhoto" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profileAvatar"
            tools:srcCompat="@drawable/noavatar_res"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/photos" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/projects" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/achivments" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:ignore="ExtraText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutSecond">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialise"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_margin="8dp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textProject1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/isProject"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textProject2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/isProject"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textProject3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/isProject"
            android:textSize="18sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>