<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/backgroundPhoto"
            app:srcCompat="@color/design_default_color_primary_dark" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profileAvatar"
            tools:srcCompat="@drawable/noavatar_res" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_margin="8dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/photos" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/projects" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/achivments" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:ignore="ExtraText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialise"
            android:textSize="20sp"/>
    </LinearLayout>
    <GridLayout
        android:id="@+id/photoGrid"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:columnCount="3"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/first_stub" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/second_stub" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/third_stub" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/fourth_stub" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/fifth_stub" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="112dp"
            android:layout_height="112dp"
            app:srcCompat="@drawable/sixth_stub" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>